Cleanup outdated Turkish translations.

--- a/translations/tr/antoinefr-online.json
+++ b/translations/tr/antoinefr-online.json
@@ -8,8 +8,7 @@
         "admin": {
             "settings": {
                 "displaymax": "Gösterilecek kullanıcı sayısı",
-                "titleoflist": "Listenin üstünde görüntülenecek başlık",
-                "title": "Ayarlar"
+                "titleoflist": "Listenin üstünde görüntülenecek başlık"
             }
         }
     }
