--- a/translations/tr/askvortsov-moderator-warnings.json
+++ b/translations/tr/askvortsov-moderator-warnings.json
@@ -48,8 +48,7 @@
                 "add_button": "Yeni Uyarı",
                 "no_warnings": "Burada hiç uyarı yok gibi görünüyor.",
                 "warnings": "Moderatör Uyarıları: {strikes} uyarı aldın!",
-                "warnings_no_strikes": "Moderatör Uyarıları: Hiçbir Uyarı Alınmadı",
-                "no-warnings": ""
+                "warnings_no_strikes": "Moderatör Uyarıları: Hiçbir Uyarı Alınmadı"
             },
             "warning_list_item": {
                 "list_item_heading": "<strong>{mod_username}</strong> adlı moderatör <strong>{strikes}</strong> ihtarla uyardı",
@@ -64,9 +63,7 @@
                 "strikes_heading": "Kaç uyarı verilsin?",
                 "public_comment_heading": "Neden <strong>{username}</strong> bu uyarıları aldı? Bu yoruları moderatörler ve diğer kullanıcılara açıktır.",
                 "private_comment_heading": "Neden <strong>{username}</strong> bu uyarıları aldı? Bu yorumları SADECE moderatörler görebilir.",
-                "submit_button": "Uyarıyı kaydet",
-                "dismiss_button": "Tamam",
-                "no_content_given": ""
+                "submit_button": "Uyarıyı kaydet"
             }
         }
     }
