--- a/translations/tr/askvortsov-saml.json
+++ b/translations/tr/askvortsov-saml.json
@@ -34,8 +34,7 @@
             "log_in": {
                 "with_saml_button": "SAML2 SSO",
                 "open_popup": "Giriş Penceresini Yeniden Aç",
-                "enable_popups": "Giriş / Kayıt için Açılır Pencereyi Aktif Et",
-                "see_popup": "Giriş / Kayıt için Açılır Pencereyi Gör"
+                "enable_popups": "Giriş / Kayıt için Açılır Pencereyi Aktif Et"
             },
             "sign_up": {
                 "post_saml_title": "Son Bir Adım..."
