--- a/translations/tr/clarkwinkelmann-author-change.json
+++ b/translations/tr/clarkwinkelmann-author-change.json
@@ -22,8 +22,7 @@
         "admin": {
             "permissions": {
                 "edit-user": "Tartışmayı ve gönderi yazarını güncelle",
-                "edit-date": "Tartışmayı ve gönderi tarihini güncelle",
-                "edit": "Tartışma ve gönderi yazarını değiştirme"
+                "edit-date": "Tartışmayı ve gönderi tarihini güncelle"
             }
         }
     }
