--- a/translations/tr/clarkwinkelmann-bookmarks.json
+++ b/translations/tr/clarkwinkelmann-bookmarks.json
@@ -17,8 +17,7 @@
         },
         "admin": {
             "settings": {
-                "independentButton": "İşaretleme kontrolünü tartışma yan menüsüne ekle",
-                "title": "İşaretle Ayarları"
+                "independentButton": "İşaretleme kontrolünü tartışma yan menüsüne ekle"
             }
         }
     }
