--- a/translations/tr/clarkwinkelmann-carving-contest.json
+++ b/translations/tr/clarkwinkelmann-carving-contest.json
@@ -46,13 +46,11 @@
                 "view": "Başvuruları göster",
                 "like": "Başvuruları beğen",
                 "participate": "Katıl",
-                "moderate": "Yönet",
-                "heading": "Oyma Yarışması"
+                "moderate": "Yönet"
             },
             "settings": {
                 "maxEntriesPerUser": "Kullanıcıların en fazla başvuru sayısı",
-                "colorMode": "Bölme modu yerine renk modunu kullan",
-                "title": "Oyma Yarışması Ayarları"
+                "colorMode": "Bölme modu yerine renk modunu kullan"
             },
             "colors": {
                 "simple": "Basit renk seti",
