--- a/translations/tr/clarkwinkelmann-email-as-display-name.json
+++ b/translations/tr/clarkwinkelmann-email-as-display-name.json
@@ -3,12 +3,10 @@
         "admin": {
             "permissions": {
                 "view-own": "Postanı kendi profilinde göster",
-                "view-all": "Postanı tüm profillerde göster",
-                "heading": "Görünen ad olarak e-postayı göster"
+                "view-all": "Postanı tüm profillerde göster"
             },
             "settings": {
-                "remove-username-registration": "Kullanıcı adı alanını kayıt formundan kaldır",
-                "title": "Uzantı Ayarları"
+                "remove-username-registration": "Kullanıcı adı alanını kayıt formundan kaldır"
             }
         },
         "forum": {
