--- a/translations/tr/clarkwinkelmann-first-post-approval.json
+++ b/translations/tr/clarkwinkelmann-first-post-approval.json
@@ -6,8 +6,7 @@
             },
             "settings": {
                 "discussionCount": "Onaylanması gereken ilk tartışma sayısı",
-                "postCount": "Onaylanması gereken ilk gönderi sayısı",
-                "title": "İlk Gönderi Onayı Ayarları"
+                "postCount": "Onaylanması gereken ilk gönderi sayısı"
             }
         }
     }
