--- a/translations/tr/clarkwinkelmann-group-invitation.json
+++ b/translations/tr/clarkwinkelmann-group-invitation.json
@@ -34,8 +34,7 @@
                 "empty": "Şimdiye kadar hiç davetiye oluşturulmadı.",
                 "unlimited": "sınırsız",
                 "create": "Oluştur",
-                "delete": "Kaldır",
-                "title": "Grup Daveti"
+                "delete": "Kaldır"
             }
         },
         "api": {
