--- a/translations/tr/clarkwinkelmann-group-list.json
+++ b/translations/tr/clarkwinkelmann-group-list.json
@@ -7,8 +7,7 @@
             "settings": {
                 "showSideNavLink": "Bağlantıyı yan gezinmede göster",
                 "showAvatarBadges": "Avatarın yanında diğer rozetleri göster",
-                "showOnlineStatus": "Çevrimiçi durumu göster",
-                "title": "Kullanıcı Listesi Ayarları"
+                "showOnlineStatus": "Çevrimiçi durumu göster"
             },
             "items": {
                 "add": "Bir grup ekleyin"
