--- a/translations/tr/clarkwinkelmann-mailing.json
+++ b/translations/tr/clarkwinkelmann-mailing.json
@@ -18,8 +18,7 @@
                 "subject_label": "Konu",
                 "default_subject": "=> clarkwinkelmann-mailing.ref.default_subject",
                 "message_label": "Mesaj",
-                "submit_button": "Gönder",
-                "email_label": "Alıcı"
+                "submit_button": "Gönder"
             },
             "modal_sent": {
                 "title_text": "Posta Gönderildi!",
