--- a/translations/tr/clarkwinkelmann-passwordless.json
+++ b/translations/tr/clarkwinkelmann-passwordless.json
@@ -14,8 +14,7 @@
                 "passwordless-login-by-default": "Giriş yöntemi şifresiz gerçekleşsin",
                 "hide-sign-up-password": "Kayıt olurken şifre belirlenmesini engelle",
                 "token-life": "Giriş bağlantılarının dakika cinsinden geçerliliği",
-                "mail-footer": "Elektronik posta altbilgi metni",
-                "title": "Şifresiz Giriş Ayarları"
+                "mail-footer": "Elektronik posta altbilgi metni"
             }
         },
         "api": {
