--- a/translations/tr/clarkwinkelmann-status.json
+++ b/translations/tr/clarkwinkelmann-status.json
@@ -3,8 +3,7 @@
         "admin": {
             "settings": {
                 "only-countries": "Yalnızca ülke bayrakları",
-                "enable-text": "Durumda metine izin ver",
-                "title": "Durum Ayarları"
+                "enable-text": "Durumda metine izin ver"
             },
             "permissions": {
                 "see": "Durumu gör",
