--- a/translations/tr/dem13n-discussion-cards.json
+++ b/translations/tr/dem13n-discussion-cards.json
@@ -1,8 +1,7 @@
 {
     "dem13n": {
         "forum": {
-            "replies": "Yanıtlar: {count}",
-            "last_reply": ""
+            "replies": "Yanıtlar: {count}"
         },
         "admin": {
             "settings": {
