--- a/translations/tr/ffans-clipboardjs.json
+++ b/translations/tr/ffans-clipboardjs.json
@@ -22,9 +22,7 @@
             "ok_btn": "Kopyalandı",
             "error_btn": "Hata",
             "no_support": "Destek bulunmuyor",
-            "msg": "{action} için {actionKey} tuşuna basın",
-            "mac_msg": "",
-            "pc_msg": ""
+            "msg": "{action} için {actionKey} tuşuna basın"
         }
     }
 }
