--- a/translations/tr/flarum-tags.json
+++ b/translations/tr/flarum-tags.json
@@ -42,9 +42,7 @@
                 "create_secondary_tag_button": "İkincil Etiket Oluşturun",
                 "primary_heading": "Birincil Etiketler",
                 "secondary_heading": "İkincil Etiketler",
-                "settings_heading": "Ayarlar",
-                "create_tag_button": "=> flarum-tags.ref.create_tag",
-                "settings_button": "Ayarlar"
+                "settings_heading": "Ayarlar"
             }
         },
         "forum": {
@@ -88,8 +86,7 @@
         },
         "ref": {
             "name": "İsim",
-            "tags": "Etiketler",
-            "create_tag": "Etiket Oluştur"
+            "tags": "Etiketler"
         }
     }
 }
