--- a/translations/tr/fof-ban-ips.json
+++ b/translations/tr/fof-ban-ips.json
@@ -33,11 +33,7 @@
                 "update_title": "Yasaklanmış IP'leri Güncelle",
                 "ban_ip_no_users": "Kimse yasaklanmamış"
             },
-            "empty_text": "Yasaklamış IP bulunamadı.",
-            "nav": {
-                "title": "IP'leri Yasakla",
-                "desc": "Yasaklı IP ekle, düzenle ve görüntüle."
-            }
+            "empty_text": "Yasaklamış IP bulunamadı."
         },
         "error": {
             "banned_ip_message": "Yetkilendirme başarısız.",
