--- a/translations/tr/fof-best-answer.json
+++ b/translations/tr/fof-best-answer.json
@@ -18,8 +18,7 @@
                 "schedule_stop_overnight": "Hatırlatıcının aktif olunmayan saatlerde çalışmasını engelleyin (ÖS 9 - ÖÖ 8 sunucu saati)",
                 "schedule_log_output": "Zamanlayıcı çıktısını kayıt dosyasına ekle",
                 "remind_tag_ids": "Hatırlatıcıyı belirli etiketlerde etkinleştirmek için etiketleri belirleyin (virgülle ayırarak)",
-                "use_alt_ui": "Alternatif şablonu kullanın (En İyi Yanıt düğmeleri gönderinin sonunda yer alır)",
-                "title": "En İyi Yanıt Ayarları"
+                "use_alt_ui": "Alternatif şablonu kullanın (En İyi Yanıt düğmeleri gönderinin sonunda yer alır)"
             }
         },
         "forum": {
@@ -38,10 +37,7 @@
                 "preferences": {
                     "awarded_best_answer": "Birisi gönderimi en iyi yanıt olarak seçtiğinde",
                     "best_answer_in_discussion": "Yanıtladığım bir tartışmada en iyi yanıt belirlendiğinde"
-                },
-                "best_answer_set_in_discussion_email": "",
-                "awarded_email": "Gönderiniz kullanıcı tarafından en iyi yanıt olarak seçti",
-                "select_email_title": "Sorununuzu çözmeyi başardınız mı?"
+                }
             }
         },
         "email": {
