--- a/translations/tr/fof-custom-footer.json
+++ b/translations/tr/fof-custom-footer.json
@@ -5,8 +5,7 @@
                 "css": "CSS",
                 "height": "Altbilgi Yüksekliği (px)",
                 "js": "JS",
-                "text": "Sayfa Sonu Metni",
-                "title": "Özel Sayfa Sonu Ayarları"
+                "text": "Sayfa Sonu Metni"
             }
         }
     }
