--- a/translations/tr/fof-drafts.json
+++ b/translations/tr/fof-drafts.json
@@ -21,8 +21,7 @@
                 "saving": "Kaydediliyor...",
                 "saved": "Kaydedildi!",
                 "exit_alert": "Taslaktaki değişiklikler yok sayılsın mı?",
-                "discard_empty_draft_alert": "Boş taslak silinsin mi?",
-                "alert": "Taslak kaydedildi."
+                "discard_empty_draft_alert": "Boş taslak silinsin mi?"
             },
             "dropdown": {
                 "empty_text": "Herhangi bir taslak kaydetmediniz",
@@ -31,8 +30,7 @@
                 "schedule_button": "Taslağı Zamanla",
                 "tooltip": "=> fof-drafts.forum.dropdown.title",
                 "alert": "Taslağınızı silmek istediğine emin misiniz?",
-                "delete_all_alert": "Tüm taslaklarınızı silmek istediğinizden emin misiniz?",
-                "button": "Taslağı Sil"
+                "delete_all_alert": "Tüm taslaklarınızı silmek istediğinizden emin misiniz?"
             },
             "schedule_draft_modal": {
                 "title": "Taslağı Zamanla",
