--- a/translations/tr/fof-forum-statistics-widget.json
+++ b/translations/tr/fof-forum-statistics-widget.json
@@ -13,8 +13,7 @@
             "settings": {
                 "widget_ignore_private_discussions_label": "Özel Tartışmaları Yoksay",
                 "widget_order_label": "Araç Yerleşimi",
-                "widget_helper_text": "Aracın, Flarum'un sol menü altında yer alması için bu ayarı düzenleyin. Sayı ne kadar yüksek olursa, sol menüdeki yerleşimi da o kadar artar (Bu pozitif veya negatif olabilir).",
-                "title": "Araç Ayarları"
+                "widget_helper_text": "Aracın, Flarum'un sol menü altında yer alması için bu ayarı düzenleyin. Sayı ne kadar yüksek olursa, sol menüdeki yerleşimi da o kadar artar (Bu pozitif veya negatif olabilir)."
             },
             "permissions": {
                 "view_discussions_count_label": "Forum istatistiklerinde tartışma sayısını göster",
