--- a/translations/tr/fof-gamification.json
+++ b/translations/tr/fof-gamification.json
@@ -28,8 +28,7 @@
             },
             "modal": {
                 "title": "Oy Verenler",
-                "upvotes_label": "Yukarı oyverenler:",
-                "downvotes_label": "Aşağı oy verenler:"
+                "upvotes_label": "Yukarı oyverenler:"
             },
             "mod_item": "Oy Verenleri Göster"
         },
@@ -83,9 +82,6 @@
                         "name": "İsim"
                     }
                 }
-            },
-            "nav": {
-                "desc": "Flarum topluluğunuz için oyunlaştırma"
             }
         }
     }
