--- a/translations/tr/fof-github-sponsors.json
+++ b/translations/tr/fof-github-sponsors.json
@@ -10,8 +10,7 @@
                 "api_token_label": "API Jetonu",
                 "account_type_label": "Hesap Tipi",
                 "login_label": "Oturum aç",
-                "group_label": "Atanacak Grup",
-                "title": ""
+                "group_label": "Atanacak Grup"
             }
         }
     }
