--- a/translations/tr/fof-linguist.json
+++ b/translations/tr/fof-linguist.json
@@ -47,10 +47,7 @@
                 "frontend": "Ön uç için",
                 "frontend-all-except-admin": "Yönetici hariç tümü",
                 "mass-edit": "Toplu düzenleme",
-                "results": "{total} eşleşen çeviriden {shown} adeti gösteriliyor",
-                "for-extension-unavailable": "Beklenen \"{namespace}\" ad alanında çeviri bulunamadı. Belki bu uzantı, çevrilecek herhangi bir metne sahip değildir veya farklı bir ad alanı kullanıyor. Çevirilerini bulmak için arama alanını kullanmayı deneyin.",
-                "with-original-translations-in-locales": "Asıl çevirilerde",
-                "without-original-translations-in-locales": "Asıl çeviriler olmadan"
+                "results": "{total} eşleşen çeviriden {shown} adeti gösteriliyor"
             },
             "clear-cache": {
                 "text": "Yeni çeviriler henüz uygulanmadı. Not: Önbelleği temizlemek forumunuzu geçici olarak yavaşlatabilir.\n",
@@ -114,10 +111,6 @@
                 "lib": "Lib (Hem Forumda hem de Yönetici Panelinde kullanılır)",
                 "ref": "Ref (diğer anahtarlar yeniden kullanılır)",
                 "api": "API"
-            },
-            "menu": {
-                "title": "Linguist",
-                "description": "Çevirileri özelleştirin."
             }
         }
     }
