--- a/translations/tr/fof-links.json
+++ b/translations/tr/fof-links.json
@@ -17,17 +17,11 @@
                 "icon_text": "=> core.ref.icon_text",
                 "url_label": "=> fof-links.ref.url",
                 "url_placeholder": "=> fof-links.ref.url",
-                "visibility": "Bağlantı görünürlüğü",
-                "registered_only": ""
+                "visibility": "Bağlantı görünürlüğü"
             },
             "links": {
                 "create_button": "=> fof-links.ref.create_link",
-                "links": "=> fof-links.ref.links",
-                "about_text": "Menü bağlantılarını düzenle."
-            },
-            "nav": {
-                "links_button": "=> fof-links.ref.links",
-                "links_text": "Üst menü bağlantılarını yönetin."
+                "links": "=> fof-links.ref.links"
             }
         },
         "ref": {
