--- a/translations/tr/fof-mason.json
+++ b/translations/tr/fof-mason.json
@@ -55,9 +55,7 @@
                 "save-field-for-answers": "Yanıt eklemek için alanı kaydedin",
                 "is_suggested": "Kullanıcılara yanıt önerin",
                 "new-answer": "Yeni yanıt",
-                "new-answer-placeholder": "Bazı metin",
-                "min_answers_count": "",
-                "max_answers_count": ""
+                "new-answer-placeholder": "Bazı metin"
             },
             "messages": {
                 "delete-answer-confirmation": "\"{content}\" yanıtını silmek istediğinizden emin misiniz? Onu kullanan tüm tartışmalardan kaldırılacaktır. Mevcut yanıtları korumak istiyorsanız bunun yerine yanıt önerisini etkisizleştirin. Yanıt silinsin mi?\n",
@@ -91,12 +89,7 @@
                 "fill-fields": "Yeni tartışmalarda alanları doldurun",
                 "update-own-fields": "Kendi tartışma alanlarını güncelle",
                 "update-other-fields": "Herhangi bir tartışmanın alanlarını güncelleyin",
-                "skip-required-fields": "Gerekli alanları atlama izni var",
-                "mason-heading": "Mason"
-            },
-            "menu": {
-                "title": "Mason",
-                "description": "Özel tartışma alanlarını yapılandırın."
+                "skip-required-fields": "Gerekli alanları atlama izni var"
             }
         }
     }
