--- a/translations/tr/fof-masquerade.json
+++ b/translations/tr/fof-masquerade.json
@@ -51,9 +51,7 @@
                 "force-user-to-completion": "Kullanıcıyı profilini tamamlamaya zorla",
                 "options": "Seçenekler",
                 "option-new": "Yeni seçenek",
-                "option-comma-warning": "Bir seçeneğin etiketi herhangi bir virgül (\",\") içeremez.",
-                "disable-user-bio": "Kullanıcı biyografisi kısmını devre dışı bırak",
-                "option-coma-warning": "Seçeneğin etiketi (\",\") işareti içeremez."
+                "option-comma-warning": "Bir seçeneğin etiketi herhangi bir virgül (\",\") içeremez."
             },
             "types": {
                 "advanced": "Gelişmiş",
@@ -61,10 +59,6 @@
                 "email": "E-posta",
                 "select": "Açılır menü",
                 "url": "Bağlantı"
-            },
-            "title": "Masquerade",
-            "menu": {
-                "description": "Kullanıcı profili alanlarını düzenle.\n"
             }
         }
     }
