--- a/translations/tr/fof-pages.json
+++ b/translations/tr/fof-pages.json
@@ -20,8 +20,7 @@
                 "url_placeholder": "=> fof-pages.ref.url"
             },
             "pages": {
-                "create_button": "=> fof-pages.ref.create_page",
-                "about_text": "Sabit sayfalar oluşturun ve düzenleyin."
+                "create_button": "=> fof-pages.ref.create_page"
             },
             "pages_list": {
                 "empty_text": "Görünüşe göre hiç sabit sayfa bulunmuyor.",
@@ -33,10 +32,6 @@
             "badges": {
                 "hidden": "Taslak",
                 "restricted": "Kısıtlanmış"
-            },
-            "nav": {
-                "pages_button": "=> fof-pages.ref.pages",
-                "pages_text": "Sabit sayfalar oluşturun."
             }
         },
         "ref": {
