--- a/translations/tr/fof-user-directory.json
+++ b/translations/tr/fof-user-directory.json
@@ -15,21 +15,7 @@
                 "refresh_tooltip": "=> core.forum.index.refresh_tooltip",
                 "load_more_button": "=> core.ref.load_more",
                 "empty_text": "Aramanızla eşleşen bir kullanıcı bulamadık.",
-                "filter_button": "Grupları Filtrele",
-                "sort": {
-                    "relevance": "İlgi",
-                    "default": "Varsayılan",
-                    "username_az": "Kullanıcı adı (a-z)",
-                    "username_za": "Kullanıcı adı (z-a)",
-                    "newest": "Yeniye göre",
-                    "oldest": "Eskiye göre",
-                    "seen_recent": "Son aktif olanlar",
-                    "seen_oldest": "Uzun süredir girmeyenler",
-                    "most_posts": "En fazla mesajı olana göre",
-                    "least_posts": "En az mesajı olana göre",
-                    "most_discussions": "En fazla tartışma başlantana göre",
-                    "least_discussions": "En az tartışma başlatana göre"
-                }
+                "filter_button": "Grupları Filtrele"
             }
         },
         "admin": {
@@ -39,8 +25,7 @@
             "settings": {
                 "link": "Kullanıcı listesinin görülebilmesi için anasayfaya bağlantı ekle",
                 "default-sort": "Varsayılan sıralama",
-                "use-small-cards": "Küçük kullanıcı kartlarını kullan",
-                "title": "Kullanıcı Listesi Ayarları"
+                "use-small-cards": "Küçük kullanıcı kartlarını kullan"
             }
         },
         "lib": {
@@ -54,9 +39,7 @@
                 "most_posts": "Çok gönderiye göre",
                 "least_posts": "Az gönderiye göre",
                 "most_discussions": "Çok tartışmaya göre",
-                "least_discussions": "Az tartışmaya göre",
-                "seen_recent": "Son çevrimiçi olan",
-                "seen_oldest": "Ziyaret etmeyenler"
+                "least_discussions": "Az tartışmaya göre"
             }
         }
     }
