--- a/translations/tr/ianm-html-head.json
+++ b/translations/tr/ianm-html-head.json
@@ -16,8 +16,7 @@
                 "text": "Ana nesnede yanlış veri sağlayarak forumu bozmak mümkün olduğundan sözdiziminizin doğru olduğundan emin olun. Kaydedildikten sonra, sağlanan geçiş anahtarını kullanarak yeni başlık nesnenizi etkinleştirin.",
                 "description_label": "Açıklama",
                 "header_label": "Özel başlık nesnesi",
-                "save_button": "Kaydet",
-                "title": ""
+                "save_button": "Kaydet"
             }
         }
     }
