--- a/translations/tr/jslirola-login2seeplus.json
+++ b/translations/tr/jslirola-login2seeplus.json
@@ -13,13 +13,7 @@
             "image": "Resimler",
             "code": "Kodlar",
             "post": {
-                "title": "Bu uzunluğu aşan içeriği gizle (<em>-1</em> hepsini gösterir)",
-                "help": "Tümü için <em>-1</em> girin."
-            },
-            "php": {
-                "title": "Eski Mod",
-                "help": "*ÖNERİLMİYOR* Eski tarayıcıları desteklemek için arka uçta çalışın. <code>mb_substr</code> ve <code>mb_strlen</code>'ı etkinleştirmeniz gerekir.",
-                "label": "PHP Kullan"
+                "title": "Bu uzunluğu aşan içeriği gizle (<em>-1</em> hepsini gösterir)"
             }
         }
     }
