--- a/translations/tr/justoverclock-infocards.json
+++ b/translations/tr/justoverclock-infocards.json
@@ -17,13 +17,7 @@
             "wednesday": "Çarşamba",
             "thursday": "Perşembe",
             "friday": "Cuma",
-            "saturday": "Cumartesi",
-            "Tuesday": "Salı",
-            "Wednesday": "Çarşamba",
-            "Thursday": "Perşembe",
-            "Friday": "Cuma",
-            "Saturday": "Cumartesi",
-            "Monday": "Pazartesi"
+            "saturday": "Cumartesi"
         },
         "admin": {
             "createapikey": "API Anahtarı",
