--- a/translations/tr/justoverclock-welcomebox.json
+++ b/translations/tr/justoverclock-welcomebox.json
@@ -5,9 +5,7 @@
             "npost": "Gönderi",
             "discussion": "Tartışmalar",
             "welcomeguest": "Hoşgeldin Ziyaretçi",
-            "notregistered": "Henüz bu foruma üye olmadınız.",
-            "logout": "Çıkış",
-            "groupwb": "Gruplar"
+            "notregistered": "Henüz bu foruma üye olmadınız."
         },
         "admin": {
             "enablepostbox": "Ziyaretçiler için Hoşgeldin Kutusunu göster"
