--- a/translations/tr/kilowhat-audit-free.json
+++ b/translations/tr/kilowhat-audit-free.json
@@ -8,14 +8,7 @@
                 "title": "Denetim",
                 "free": "Bedava",
                 "pro": "Pro",
-                "upgrade": "Pro'ya yükselt",
-                "documentation": "Tam çevrimiçi belgeler",
-                "discuss": "Flarum Discuss'da Tartışma",
-                "version": "Sürüm {version}"
-            },
-            "menu": {
-                "title": "Denetim Günlüğü",
-                "description": "Son eylemleri inceleyin."
+                "upgrade": "Pro'ya yükselt"
             }
         },
         "forum": {
