--- a/translations/tr/kilowhat-audit-pro.json
+++ b/translations/tr/kilowhat-audit-pro.json
@@ -8,14 +8,7 @@
                 "title": "Denetim",
                 "free": "Bedava",
                 "pro": "Pro",
-                "upgrade": "Pro'ya yükselt",
-                "documentation": "",
-                "discuss": "",
-                "version": ""
-            },
-            "menu": {
-                "title": "",
-                "description": ""
+                "upgrade": "Pro'ya yükselt"
             }
         },
         "forum": {
