--- a/translations/tr/kilowhat-custom-paths.json
+++ b/translations/tr/kilowhat-custom-paths.json
@@ -47,8 +47,7 @@
                 },
                 "reset": "Dizinleri sıfırla",
                 "disabled": "Uzantı etkinleştirilmemiş",
-                "redirect": "Varsayılan Flarum dizinlerini yeni dizinlere yönlendirin",
-                "title": "Özel Dizinler"
+                "redirect": "Varsayılan Flarum dizinlerini yeni dizinlere yönlendirin"
             }
         }
     }
