--- a/translations/tr/kilowhat-formulaire.json
+++ b/translations/tr/kilowhat-formulaire.json
@@ -52,14 +52,7 @@
                     "accept-submissions": "Açık",
                     "allow-modification": "Değişiklik",
                     "submissions": "Başvurumlar",
-                    "actions": "Eylemler",
-                    "type": ""
-                },
-                "title": "",
-                "type-options": {
-                    "standalone": "",
-                    "groups": "",
-                    "tags": ""
+                    "actions": "Eylemler"
                 }
             },
             "global-settings": {
@@ -149,12 +142,7 @@
                     "permission-see-own": "",
                     "permission-see-any": "",
                     "permission-edit-own": "",
-                    "permission-edit-any": "",
-                    "slug": "",
-                    "email-confirmation-message": "",
-                    "email-notification-message": "",
-                    "email-confirmation-title": "",
-                    "email-notification-title": ""
+                    "permission-edit-any": ""
                 },
                 "link-options": {
                     "standalone": "",
@@ -168,14 +156,7 @@
                 "email-notification-options": "",
                 "exiting-with-unsaved-data": "",
                 "preview": "",
-                "save-for-preview": "",
-                "template": "",
-                "expert-mode": "",
-                "restore": "",
-                "hide": "",
-                "delete": "",
-                "delete-confirmation": "",
-                "title": ""
+                "save-for-preview": ""
             },
             "auto-discussion-options-modal": {
                 "title": "",
@@ -350,10 +331,7 @@
                     "updated_at": "",
                     "hidden_at": ""
                 }
-            },
-            "submission-link-user-invalid": "",
-            "submission-link-discussion-invalid": "",
-            "submission-link-already-exists": ""
+            }
         },
         "mail": {
             "title-your-submission": "",
