--- a/translations/tr/kilowhat-wordpress.json
+++ b/translations/tr/kilowhat-wordpress.json
@@ -76,8 +76,7 @@
                 "customize_text": ""
             },
             "permissions": {
-                "gambits": "",
-                "heading": ""
+                "gambits": ""
             },
             "save-controls": {
                 "validation-errors": "",
@@ -102,16 +101,6 @@
                 "wordpress_password": "",
                 "wordpress_password_help": "",
                 "install": "Kur"
-            },
-            "menu": {
-                "title": "",
-                "description": ""
-            },
-            "header": {
-                "title": "",
-                "documentation": "",
-                "discuss": "",
-                "version": ""
             }
         },
         "forum": {
