--- a/translations/tr/maicol07-sso.json
+++ b/translations/tr/maicol07-sso.json
@@ -13,9 +13,7 @@
                 "jwt_section_subtitle": "JWT Eklenti ayarları",
                 "jwt_iss": "Sertifikayı Veren Etki Alanı",
                 "jwt_signer_key": "İmzalayan anahtarı",
-                "jwt_signing_algorithm": "İmzalama Yöntemi",
-                "disable_login_btn": "",
-                "disable_signup_btn": ""
+                "jwt_signing_algorithm": "İmzalama Yöntemi"
             }
         },
         "forum": {
