--- a/translations/tr/michaelbelgium-profile-views.json
+++ b/translations/tr/michaelbelgium-profile-views.json
@@ -9,16 +9,7 @@
         "admin": {
             "settings": {
                 "track_guests_label": "Ziyaretçileri takip et",
-                "max_viewcount_label": "Maksimum ziyaretçi listesi sayısı",
-                "title": "Profil Görünümleri ayarları"
-            }
-        }
-    },
-    "flarum_profile_views": {
-        "forum": {
-            "user": {
-                "title_last_viewers": "Profili son görüntüleyenler",
-                "views_count_text": "{viewcount} defa görüntülendi"
+                "max_viewcount_label": "Maksimum ziyaretçi listesi sayısı"
             }
         }
     }
