--- a/translations/tr/migratetoflarum-fake-data.json
+++ b/translations/tr/migratetoflarum-fake-data.json
@@ -13,8 +13,7 @@
                 "date": "",
                 "date-start-placeholder": "",
                 "date-interval-placeholder": "",
-                "send": "=> migratetoflarum-fake-data.ref.send",
-                "title": "Sahte veriler oluşturun"
+                "send": "=> migratetoflarum-fake-data.ref.send"
             }
         },
         "forum": {
@@ -45,8 +44,7 @@
             "date": "",
             "date-start-placeholder": "",
             "date-interval-placeholder": "",
-            "send": "Veri oluştur",
-            "discussion-count": "Oluşturulacak tartışma sayısı"
+            "send": "Veri oluştur"
         }
     }
 }
