--- a/translations/tr/therealsujitk-gifs.json
+++ b/translations/tr/therealsujitk-gifs.json
@@ -13,12 +13,7 @@
         },
         "admin": {
             "gifs": {
-                "giphyAPIkey": "Giphy API Key",
-                "title": "GIF API Ayarları"
-            },
-            "about": {
-                "stringA": "Uzantı geliştiricisi: ",
-                "stringB": "Bana bağış yapın "
+                "giphyAPIkey": "Giphy API Key"
             }
         }
     }
