--- a/translations/tr/therealsujitk-hljs.json
+++ b/translations/tr/therealsujitk-hljs.json
@@ -2,12 +2,7 @@
     "therealsujitk": {
         "admin": {
             "hljs": {
-                "themename": "Tema Adı",
-                "title": "highlight.js"
-            },
-            "about": {
-                "stringA": "Uzantı geliştiricisi ",
-                "stringB": "Bağış Yap "
+                "themename": "Tema Adı"
             }
         }
     }
