--- a/translations/tr/therealsujitk-show-password.json
+++ b/translations/tr/therealsujitk-show-password.json
@@ -6,12 +6,7 @@
         "admin": {
             "show_password_type": "Gösterme yöntemini seçin",
             "show_password_checkbox": "Onay kutusu",
-            "show_password_icon": "Simge",
-            "show_password_title": "Şifreyi Göster Ayarları",
-            "about": {
-                "stringA": "Uzantı geliştiricisi ",
-                "stringB": "Bağış yap "
-            }
+            "show_password_icon": "Simge"
         }
     }
 }
