--- a/translations/tr/clarkwinkelmann-emojionearea.json
+++ b/translations/tr/clarkwinkelmann-emojionearea.json
@@ -11,9 +11,7 @@
                 "enableTones": "Tonları etkinleştir",
                 "filtersPosition": "Kategorileri en alta taşı",
                 "searchPosition": "Arama ve tonları en alta taşı",
-                "hideFlarumButton": "Flarum'un ifade düğmesini gizle",
-                "title": "EmojioneArea ayarları",
-                "hideFlarumButtonHelp": "Bu ayarın çalışabilmesi için İfade Seçici uzantısının İfade uzantısından sonra aktif edilmesi gerekmektedir"
+                "hideFlarumButton": "Flarum'un ifade düğmesini gizle"
             }
         }
     }
