--- a/translations/tr/clarkwinkelmann-popular-discussion-badge.json
+++ b/translations/tr/clarkwinkelmann-popular-discussion-badge.json
@@ -31,8 +31,7 @@
                 "within_placeholder": "tüm",
                 "hours": "s",
                 "and": "VE",
-                "or": "VEYA",
-                "title": "Popüler tartışmalar rozeti ayarları"
+                "or": "VEYA"
             }
         }
     }
