--- a/translations/tr/clarkwinkelmann-see-past-first-post.json
+++ b/translations/tr/clarkwinkelmann-see-past-first-post.json
@@ -10,8 +10,7 @@
             },
             "settings": {
                 "hide-comment-count": "Tartışmadaki yanıtların sayısını gizle",
-                "hide-last-post": "Tartışmadaki son gönderi kullanıcısını ve tarihini gizle",
-                "title": "İlk gönderiye bakma ayarları"
+                "hide-last-post": "Tartışmadaki son gönderi kullanıcısını ve tarihini gizle"
             }
         }
     }
