--- a/translations/tr/fof-follow-tags.json
+++ b/translations/tr/fof-follow-tags.json
@@ -11,8 +11,7 @@
                 "unfollow_tag_button": "Takibi bırak",
                 "following": {
                     "following_none_label": "=> fof-follow-tags.ref.filtering_options.none",
-                    "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags",
-                    "following_all_label": "=> fof-follow-tags.ref.filtering_options.all"
+                    "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags"
                 }
             },
             "badge": {
@@ -50,9 +49,7 @@
             "settings": {
                 "following_page_default_label": "Varsayılan Takip Etilenler Filtrelemesi",
                 "following_none_label": "=> fof-follow-tags.ref.filtering_options.none",
-                "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags",
-                "title": "FriendsOfFlarum Follow Tags",
-                "following_all_label": "=> fof-follow-tags.ref.filtering_options.all"
+                "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags"
             }
         },
         "email": {
@@ -65,10 +62,7 @@
                 "newDiscussionInTag": "Hey {recipient_display_name},\n\n{actor_display_name} takip ettiğin bir etikette yeni bir tartışma başlattı: {discussion_title}\n\nYeni tartışmayı görüntülemek için bağlantıya göz at:\n{discussion_url}\n\n---\n\n{post_content}\n",
                 "newPostInTag": "Hey {recipient_display_name},\n\n{actor_display_name} takip ettiğin etiketteki bir tartışmaya yeni bir gönderi bıraktı: {discussion_title}\n\nYeni gönderiyi görüntülemek için bağlantıya göz at:\n{post_url}\n\n---\n\n{post_content}\n\n---\n\nTartışmada bir etkinlik gerçekleştirmediğiniz taktirde yeni bildirimleri almayacaksınız.\n",
                 "newDiscussionTag": "Hey {recipient_display_name},\n\n{actor_display_name}, {author_display_name} tarafından başlatılan ve senin takip ettiğin etiketteki tartışmanın etiketini değiştirdi {discussion_title}\n\nDeğişiklikleri görüntülemek için bağlantıya göz at:\n{discussion_url}\n"
-            },
-            "newDiscussionInTag": "[Etiket | Yeni Tartışma] başlığı",
-            "newPostInTag": "[Etiket | Yeni Gönderi] başlığı",
-            "newDiscussionTag": "[Etiket | Değişen Etiket] başlığı"
+            }
         },
         "ref": {
             "follow": "Takip et",
@@ -78,8 +72,7 @@
             "lurking": "Gizlenmiş",
             "filtering_options": {
                 "none": "Takip Edilen Tartışmalar",
-                "tags": "Takip Edilen Etiketler",
-                "all": "Takip Ettiğiniz Her Şey"
+                "tags": "Takip Edilen Etiketler"
             }
         }
     }
