--- a/translations/tr/fof-nightmode.json
+++ b/translations/tr/fof-nightmode.json
@@ -12,9 +12,7 @@
                     "default_theme_helper": "Varsayılan tema, yeni kullanıcılar, misafirler ve tercihi ayarlanmamış olanlar için otomatik olarak ayarlanır.",
                     "theme_auto": "=> fof-nightmode.ref.auto",
                     "theme_light": "=> fof-nightmode.ref.light",
-                    "theme_dark": "=> fof-nightmode.ref.dark",
-                    "title": "FoF Gece Modu",
-                    "default_theme_important": "Bu aynı zamanda elle tema seçimi gerçekleştirmemiş kullanıcıları da etkiler!"
+                    "theme_dark": "=> fof-nightmode.ref.dark"
                 }
             }
         },
