--- a/translations/tr/fof-recaptcha.json
+++ b/translations/tr/fof-recaptcha.json
@@ -5,8 +5,7 @@
                 "help_text": "Google reCAPTCHA bilgilerinizi <a>buradan</a> alın.",
                 "secret_key_label": "Secret Key",
                 "site_key_label": "Site Key",
-                "type_label": "reCAPTCHA Tipi",
-                "title": "FriendsOfFlarum reCAPTCHA"
+                "type_label": "reCAPTCHA Tipi"
             },
             "permissions": {
                 "post_without_captcha": "Captcha olmadan gönderi ve tartışmalar oluşturun"
