--- a/translations/tr/fof-secure-https.json
+++ b/translations/tr/fof-secure-https.json
@@ -2,8 +2,7 @@
     "fof-secure-https": {
         "admin": {
             "settings": {
-                "replace": "HTTPS aracılığıyla proxy görüntüler",
-                "title": ""
+                "replace": "HTTPS aracılığıyla proxy görüntüler"
             }
         },
         "forum": {
