--- a/translations/tr/itnt-uitab.json
+++ b/translations/tr/itnt-uitab.json
@@ -3,14 +3,7 @@
         "admin": {
             "settings": {
                 "help_text": "Eğer Flarum siteniz alt dizine kuruluysa, lütfen aşağıdaki alt dizini belirtin (bölü çizgiyle bitirin), aksi takdirde lütfen varsayılan değeri bırakın. Örneğin, <code>/sub/</code>",
-                "home_page_label": "Anasayfa",
-                "requirement": "UI Tab uzantısını kullanmadan önce mutlaka <code>flagrow/direct-links</code> uzantısını aktif etmelisiniz",
-                "title": "UI Tab Ayarları",
-                "tags_title": "Alt Dizin Adresiniz",
-                "tags_page_label": "Etiketler",
-                "create_page_label": "Oluştur",
-                "settings_page_label": "Ayarlar",
-                "notifications_page_label": "Bildirimler"
+                "home_page_label": "Anasayfa"
             }
         }
     }
