--- a/translations/tr/michaelbelgium-discussion-views.json
+++ b/translations/tr/michaelbelgium-discussion-views.json
@@ -12,8 +12,7 @@
             "modal_resetviews": {
                 "title": "Tartışmaların görüntülenmesini sıfırla",
                 "submit_button": "Evet, hepsini kaldır",
-                "label": "Bu tartışmaya ait {count} görüntülenme temizlenecektir. Devam ediyor musunuz?|Bu tartışmaya ait {count} görüntülenme temizlenecektir. Devam ediyor musunuz?",
-                "submit": "Evet tümünü sil"
+                "label": "Bu tartışmaya ait {count} görüntülenme temizlenecektir. Devam ediyor musunuz?|Bu tartışmaya ait {count} görüntülenme temizlenecektir. Devam ediyor musunuz?"
             },
             "discussion_controls": {
                 "resetviews_button": "Görüntülenmeyi sıfırla"
@@ -25,8 +24,7 @@
         "admin": {
             "permissions": {
                 "reset_views_label": "Tartışma görüntülenmesini sıfırla",
-                "view_number_label": "Tartışma görüntüleme sayısını görüntüle",
-                "can_view_number": "Tartışma görüntülenmesini göster"
+                "view_number_label": "Tartışma görüntüleme sayısını görüntüle"
             },
             "settings": {
                 "title": "Tartışma Görüntülenme Ayarları",
@@ -34,42 +32,7 @@
                 "abbr_numbers_label": "Görünüm numaralarını kısaltın",
                 "show_filter_label": "Popüler sıralama alanını etkinleştir",
                 "max_viewcount_label": "Maksimum görüntüleme listesi öğesi",
-                "show_viewlist_label": "Görüntüleme listesini etkinleştir",
-                "track_unique": "Tekil görüntülenmeleri say",
-                "abbr_numbers": "Görüntülenme numaralarını kısalt",
-                "show_filter": "Görüntülenen (Görüntülenmeyen) filtresini etkinleştir",
-                "max_viewcount": "Görüntüleyenlerin sayısı",
-                "show_viewlist": "Görüntüleyenleri göster"
-            }
-        }
-    },
-    "flarum_discussion_views": {
-        "forum": {
-            "modal_resetviews": {
-                "title": "Tartışmaların görüntülenmesini sıfırla",
-                "submit": "Kaydet",
-                "label": "Görüntülenme sayısını ayarla"
-            },
-            "discussion_controls": {
-                "resetviews_button": "Görüntülenme sayısını ayarla"
-            },
-            "viewlist": {
-                "title": ""
-            }
-        },
-        "admin": {
-            "permissions": {
-                "can_reset_views": "",
-                "can_view_number": "",
-                "reset_views_label": "Tartışma görüntülenmesini ayarla"
-            },
-            "settings": {
-                "title": "",
-                "track_unique": "",
-                "abbr_numbers": "",
-                "show_filter": "",
-                "max_viewcount": "",
-                "show_viewlist": ""
+                "show_viewlist_label": "Görüntüleme listesini etkinleştir"
             }
         }
     }
