--- a/translations/tr/nearata-copy-code-to-clipboard.json
+++ b/translations/tr/nearata-copy-code-to-clipboard.json
@@ -1,8 +1,7 @@
 {
     "nearata-copy-code-to-clipboard": {
         "forum": {
-            "copy": "Panoya kopyala",
-            "copied": "Panoya kopyalandı"
+            "copy": "Panoya kopyala"
         }
     }
 }
