--- a/translations/tr/reflar-recache.json
+++ b/translations/tr/reflar-recache.json
@@ -29,8 +29,7 @@
                     "fillin": "",
                     "success": ""
                 },
-                "check_button": "",
-                "text": ""
+                "check_button": ""
             }
         }
     }
