--- a/translations/tr/v17development-support.json
+++ b/translations/tr/v17development-support.json
@@ -74,8 +74,7 @@
                     "hide_article": "Makaleyi gizle",
                     "recover_article": "Makaleyi geri getir",
                     "delete_forever": "Kalıcı olarak sil",
-                    "view_ratings": "Derecelendirmeleri göster",
-                    "event_logs": ""
+                    "view_ratings": "Derecelendirmeleri göster"
                 }
             },
             "support_ratings": {
@@ -116,10 +115,6 @@
                     "rating": "Derecelendirme",
                     "username": "=> core.ref.username",
                     "rated_on": "Tarihinde derecelendirildi"
-                },
-                "events": {
-                    "title": "",
-                    "article_created": ""
                 }
             },
             "utils": {
